ALS-1636: Fix some minor issues from psamaui move

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
@@ -1,9 +1,20 @@
 <html>
 <head>
-<script src="/picsureui/webjars/requirejs/2.3.5/require.min.js" data-main="/picsureui/main"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/picsureui/webjars/requirejs/2.3.5/require.min.js" data-main="/picsureui/main"></script>
+    <link href="/picsureui/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css"
+          rel="stylesheet">
+    <link href="/picsureui/webjars/noty/3.1.4/lib/noty.css"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
-
+<div id="header" class="blue-bg-white-text">
+    <div id="header-content" class="container"></div>
+</div>
+<div id="main-content" class="container"></div>
+<div id="footer">
+    <div id="footer-content"></div>
+</div>
 </body>
 </html>
