Adds fontawesome webjar v6

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
@@ -3,7 +3,7 @@
     <script src="/picsureui/webjars/requirejs/2.3.5/require.min.js" data-main="/picsureui/main"></script>
     <link href="/picsureui/webjars/noty/3.1.4/lib/noty.css"
           rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/picsureui/webjars/font-awesome/6.1.2/css/all.min.css">
 
 </head>
 <body>
