Adds chardin js for tour

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
@@ -4,9 +4,10 @@
     <link href="/picsureui/webjars/noty/3.1.4/lib/noty.css"
           rel="stylesheet">
     <link rel="stylesheet" href="/picsureui/webjars/font-awesome/6.1.2/css/all.min.css">
+    <link rel="stylesheet" href="/picsureui/webjars/chardin.js/0.2.0/chardinjs.css">
 
 </head>
-<body>
+<body data-chardin-sequenced="true" data-chardin-auto="false" data-chardin-delay="800">
 <div id="header" class="blue-bg-white-text">
     <div id="header-content" class="container"></div>
 </div>
