init Genomic fitlers

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
@@ -15,5 +15,6 @@
 <div id="footer">
     <div id="footer-content"></div>
 </div>
+<link rel="stylesheet" href="/picsureui/webjars/jstree/3.3.7/themes/default/style.min.css"></link>
 </body>
 </html>
