--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
@@ -15,6 +15,6 @@
 <div id="footer">
     <div id="footer-content"></div>
 </div>
-<div id="cookie-consent-container" class="container"></div>
+<div id="cookie-consent-container"></div>
 </body>
 </html>
