[ALS-5042] Add google tag manager and cookie preferences popup (#148)
* Update httpd-vhosts.conf

Update CSP to correctly handle Google Analytics

* [ALS-4794] Execute() can now be overridden

* [ALS-4814] Fix Open Access Login

Upon reaching open access there is no longer a duplicate redirect. Additionally, PSAMA is no longer required as an override. Routing has been updated as well. We now override the execute function to implement our own login and authorization approach.

* [ALS-4721] Add named dataset modal and button (#123)

* [ALS-4736] Add dataset management to user profile page (#133)

* [ALS-4732] [ALS-4737] Update override structure for use in BDC (#137)

* [ALS-4721] Add more overrides to allow GIC to hide the save button. (#138)

* [ALS-5072] Let's not subtract 2 from the variant count

* [ALS-5073] Fix Variant Explorer data tables error

- silence misleading warning

* [ALS-4918] New search interface; enable genomic filter modal (#136)

* Update search UI for better genomic searches

* More search ui updates

* fix sp, styles for baseline

* Hides genomic filter button when no data, bug fix

* Check if empty or undefined

* :angry:

* Update my bad boolean logic

* make sure info cols are loaded

* [ALS-5058]: Fix bug with selecting lots of items

* Update reset warning

* sanitize inputs

* Fix encoding

* ALS-1513

* Fix old genomic filtering not working with new way

* Fix ui issue and use arrow function

* remove urlencode as its done later

* Remove whitespace changes

* oxford comma

* spacing

* remove unused function

* Don't pass stuff when you don't need to

* Update Dockerfile

* Update Dockerfile

* Add gtm

* fix conflicts and rebase

* remove redundant script tag

* remove settings prop

* first pass at cookie consent banner

* Styles and fixes for cookie dialog

* simplify UI

* Fix merge

* remove empty line

* remove no script

* Move noscript


--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/index.html
@@ -15,5 +15,11 @@
 <div id="footer">
     <div id="footer-content"></div>
 </div>
+<div id="cookie-consent-container"></div>
+<noscript> 
+    <iframe src="https://www.googletagmanager.com/ns.html?id='+settings.analyticsId+'" 
+        height="0" width="0" style="display:none;visibility:hidden"> 
+    </iframe>
+</noscript> 
 </body>
 </html>
